# reporter

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  HISTORY.rst  LICENSE  Makefile  README copy.md  README.md  SECURITY.md  find_and_replace.sh  pyproject copy.toml  pyproject.toml  requirements.txt  setup.py  travis_pypi_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: Dockerfile  README.md
docs/: conf.py  index.rst  installation.rst
pyakmc/: cli.py
reporter/: cli.py  model.py
tests/: test_cli.py  test_reporter.py
